D-canary/01-frontend-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v2
  namespace: boutique
  labels: { app: frontend }
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: v2
  template:
    metadata:
      labels:
        app: frontend
        version: v2
    spec:
      containers:
      - name: server
        image: gcr.io/google-samples/microservices-demo/frontend:v0.8.0
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet: { path: "/_healthz", port: 8080 }
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet: { path: "/_healthz", port: 8080 }
          initialDelaySeconds: 30
          periodSeconds: 10
