D-canary/20-virtualservice-canary-fault-injection.yaml
# 20-virtualservice-canary-fi-v2only.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: boutique-vs
  namespace: boutique
spec:
  hosts: [ shop.local ]
  gateways: [ istio-system/boutique-gw ]
  http:
  - name: v2-fault-when-header
    match:
    - headers: { x-canary: { exact: v2-fault } }
      uri: { prefix: "/" }
    fault:
      abort:
        httpStatus: 500
        percentage: { value: 100 }
    retries: {attempts: 0}
    route:
    - destination:
        host: frontend-external.boutique.svc.cluster.local
        subset: v2
        port: { number: 80 }
      weight: 100
    headers: { response: { add: { x-version: "v2-fault" } } }

  - name: canary-route
    match: [ { uri: { prefix: "/" } } ]
    route:
    - destination: { host: frontend-external.boutique.svc.cluster.local, subset: v1, port: { number: 80 } }
      weight: 50
      headers: { response: { add: { x-version: "v1" } } }
    - destination: { host: frontend-external.boutique.svc.cluster.local, subset: v2, port: { number: 80 } }
      weight: 50
      headers: { response: { add: { x-version: "v2" } } }
