D-canary/20-virtualservice-canary.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: boutique-vs
  namespace: boutique
spec:
  hosts:
  - shop.local
  gateways:
  - istio-system/boutique-gw
  http:
  - name: canary-route
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend-external.boutique.svc.cluster.local
        subset: v1
        port:
          number: 80
      weight: 100        # 초기엔 v1=100
      headers:
        response:
          add:
            x-version: "v1"
    - destination:
        host: frontend-external.boutique.svc.cluster.local
        subset: v2
        port:
          number: 80
      weight: 0
      headers:
        response:
          add:
            x-version: "v2"
