D-canary/virtualservice_canary.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: boutique-vs
  namespace: boutique
spec:
  hosts:
  - shop.local
  gateways:
  - istio-system/boutique-gw
  http:
  - name: canary-route
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend-external.boutique.svc.cluster.local
        subset: v1
        port:
          number: 80
      weight: 100
    - destination:
        host: frontend-external.boutique.svc.cluster.local
        subset: v2
        port:
          number: 80
      weight: 0
